tests/expected_invalid_ordinary_permit_param.diag.out
<input>:4:18: error: permit parameter 'pass' must be written as 'as pass: RenderPassActive'
    public fn submit(pass: RenderPassActive) -> Int {
                     ^^^^^^^^^^^^^^^^^^^^^^
